<resources>
	<string name="app_name">Propr</string>

	<!-- Strings related to login -->
	<string name="prompt_email">Username</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in</string>
	<string name="create_new_account">Create new account</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="error_invalid_username">This username is invalid</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_field_required">This field is required</string>
	<string name="password">Password</string>
	<string name="repeat_password">Repeat password</string>
	<string name="email_address">Email address</string>
	<string name="username">Username</string>
	<string name="register_submit_button">Register account</string>
	<string name="username_validation_size">Username must be longer than 5 characters</string>
	<string name="email_validation">Invalid email address</string>
	<string name="password_validation_size">Password must be longer than 7 characters</string>
	<string name="password_validation_not_matching">Passwords do not match</string>

	<!-- Strings related to join group -->
	<string name="join_group">Please enter groupcode to join</string>
	<string name="join">Join!</string>
	<string name="hint_group_code">Group code</string>
	<string name="join_toolbar">Join a group</string>

	<!-- Strings related to add taskdefinitions -->
	<string name="add_task_toolbar">Add a task</string>
	<string name="new_task">New task:</string>
	<string name="frequency">How often should this task be done?</string>
	<string name="hint_task_name">Name</string>
	<string name="hint_task_description">Description</string>
	<string name="hint_task_weight">Please select a weight for this task</string>
	<string name="hint_task_number">Number</string>
	<string name="times">times a</string>
	<string-array name="frequencytypes">
		<item>DAY</item>
		<item>WEEK</item>
		<item>MONTH</item>
		<item>YEAR</item>
	</string-array>
	<string-array name="weights">
		<item>LIGHT</item>
		<item>MEDIUM</item>
		<item>HEAVY</item>
	</string-array>
	<string name="item_title_task_definitions">Task definitions</string>
	<string name="add_more">Add more</string>
	<string name="done">Done</string>
	<string name="input_not_valid">Input is not valid, try again</string>

	<!-- IP-adres van de host-machine, voor emulators -->
	<string name="account_type">nl.giphouse.propr</string>
	<string name="loading_placeholder">Loading…</string>
	<string name="connection_failed">Connection failed</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_main">Propr</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="login_title">Login to your Propr account</string>
	<string name="register_account_title">Register a new Propr account</string>
	<string name="title_activity_group_add">Add a Propr group</string>
	<string name="content_description_group_name">The name for your group</string>
	<string name="hint_group_name">Group name</string>
	<string name="hint_group_password">Group code</string>
	<string name="button_text_create_group">Create group</string>
	<string name="group_add_description">Please enter a name and code for your group. The code is used to secure the group.</string>
	<string name="add_group">Add group</string>
	<string name="content_description_group_members">Group members</string>
	<string name="group_members">Group members</string>
	<string name="group_image">Group image</string>
	<string name="register">Register account</string>
	<string name="no_groups">Uh-oh! No groups could be found. Be sure to create or join another group!</string>
	<string name="loading">Loading…</string>
	<string name="firstname">First name</string>
	<string name="lastname">Lastname</string>
	<string name="last_name_error">Please fill in a last name</string>
	<string name="first_name_error">Please fill in a first name</string>
	<string name="error_enter_groupname">Please enter a name</string>
	<string name="error_enter_groupcode">Please enter a group code</string>
	<string name="error_length_groupcode">The invite code must contain at least 5 characters</string>
	<string name="error_groupname_exists">This groupname already exists. Please choose another name</string>
	<string name="error_unknown_request_error">Unknown error. Statuscode: %d, message: %s</string>
	<string name="title_activity_group_tabbed">View group</string>
	<string name="tab_text_1">My tasks</string>
	<string name="tab_text_2">Groupmembers</string>
	<string name="tab_text_3">Schedule</string>
	<string name="name_format">%1$s %2$s</string>
	<string name="action_groep_wijzigen">Edit</string>
	<string name="action_groep_verlaten">Leave</string>
	<string name="schedule_placeholder">Schedule fragment</string>
	<string name="placeholder_group_member">Group members fragment</string>
	<string name="placeholder_my_tasks">My tasks fragment</string>
	<string name="account_avatar">account avatar</string>
	<string name="default_login_reason">Please log in to your Propr account.</string>
	<string name="expired_login_reason">You haven\'t used Propr for a while! Please enter your password.</string>
	<string name="invalid_login_reason">We could not find that account! Please log in with your account.</string>
	<string name="one_account_allowed">Only one Propr account is supported!</string>
	<string name="schedule_list_placeholder">No tasks have been scheduled yet!</string>
	<string name="item_title_activity">Activity</string>
	<string name="item_title_scheduled">Scheduled</string>
	<string name="item_title_settings">Settings</string>
	<string name="item_title_tasks">My Tasks</string>
	<string name="item_title_members">Members</string>
	<string name="description_task_assignee">Task assignee image</string>
	<string name="description_task_state">Task state image</string>
	<string name="placeholder_task_name">This is the task name</string>
	<string name="placeholder_date">01–01–2017</string>
	<string name="hint_complete_task_additional_notes">Additional notes</string>
	<string name="title_photo_upload">Upload a photo of your work!</string>
	<string name="placeholder_task_description">Task description</string>
	<string name="title_task_description">Task description:</string>
	<string name="title_complete_task">Complete task</string>
	<string name="item_leave_group">Leave</string>
	<string name="message_leave_group">Do you really want to leave this group? Your data will be deleted and you will not be able to join unless you know the code!</string>
	<string name="label_leave_group">Leave</string>
	<string name="label_cancel">Cancel</string>
	<string name="title_notes">Notes</string>
	<string name="placeholder_task_notes">Here will possibly be some notes about task completion</string>
	<string name="title_task_image">Image</string>
	<string name="description_task_image">Task image</string>
	<string name="title_rate_this_task">Rate this task</string>
	<string name="no_image_taken">No image was taken for this task</string>
	<string name="take_picture">Take picture</string>
	<string name="title_rate_task">Rate task</string>
	<string name="hint_rating_comments">Comments</string>
	<string name="button_submit_rating">Submit rating</string>
	<string name="item_title_group_info">Group info</string>
	<string name="reschedule">Reschedule</string>
	<string name="title_schedule_dialog">For how long would you like to generate a schedule?</string>
	<string name="message_reschedule_group">The group schedule will be updated</string>
	<string name="item_title_update_schedule">Update schedule</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_save">Save</string>
	<string name="frequency_error">Frequency should be larger than 0</string>
	<string name="no_tasks_message">No tasks have been scheduled for you yet!</string>
</resources>
