<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:id="@+id/relativeLayout">

	<TextView
		android:id="@+id/listTitle"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/hint_group_name"
		android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/imageView2"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/listDescription"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="4dp"
		android:contentDescription="@string/content_description_group_members"
		android:maxLines="4"
		android:text="@string/group_members"
		android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
		android:textSize="14sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/imageView2"
		app:layout_constraintTop_toBottomOf="@+id/listTitle" />

	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/placeholder"
		android:contentDescription="@string/group_image" />
</android.support.constraint.ConstraintLayout>