<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/groupListLayout"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<ImageView
		android:id="@+id/group_avatar_image"
		android:layout_width="48dp"
		android:layout_height="48dp"
		android:layout_marginBottom="8dp"
		android:layout_marginStart="4dp"
		android:layout_marginTop="8dp"
		android:contentDescription="@string/group_image"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/placeholder_group" />

	<LinearLayout
		android:id="@+id/linearLayout2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@+id/group_avatar_image"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0">

		<TextView
			android:id="@+id/listTitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/hint_group_name"
			android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

		<TextView
			android:id="@+id/listDescription"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:contentDescription="@string/content_description_group_members"
			android:text="@string/group_members"
			android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
			android:textSize="14sp" />

	</LinearLayout>

</android.support.constraint.ConstraintLayout>