<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/linearLayout3"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/colorBackground">

	<ImageView
		android:id="@+id/task_assignee_image"
		android:layout_width="36dp"
		android:layout_height="36dp"
		android:layout_marginBottom="8dp"
		android:layout_marginStart="4dp"
		android:layout_marginTop="8dp"
		android:contentDescription="@string/description_task_assignee"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/placeholder_avatar" />

	<ImageView
		android:id="@+id/task_status_image"
		android:layout_width="24dp"
		android:layout_height="24dp"
		android:layout_marginStart="8dp"
		android:contentDescription="@string/description_task_state"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@+id/task_assignee_image"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_assignment_turned_in_black_24dp" />

	<TextView
		android:id="@+id/task_name_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/placeholder_task_name"
		android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@+id/task_status_image"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.533" />

	<TextView
		android:id="@+id/task_due_date_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/placeholder_date"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
