<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView
			android:id="@+id/login_reason_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:text="@string/default_login_reason"
			android:textAlignment="center"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<android.support.design.widget.TextInputLayout
			android:id="@+id/textInputLayout3"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/login_reason_text">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/prompt_email"
				android:inputType="textEmailAddress"
				android:maxLines="1"
				android:singleLine="true" />

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/textInputLayout4"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/prompt_password"
				android:imeActionLabel="@string/action_sign_in_short"
				android:inputType="textPassword"
				android:maxLines="1"
				android:singleLine="true" />

		</android.support.design.widget.TextInputLayout>

		<Button
			android:id="@+id/sign_in_button"
			style="@style/Base.TextAppearance.AppCompat.Button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:fontFamily="sans-serif"
			android:text="@string/action_sign_in"
			android:textAllCaps="false"
			app:layout_constraintBottom_toTopOf="@+id/register_account_button"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />

		<Button
			android:id="@+id/register_account_button"
			style="@style/Base.TextAppearance.AppCompat.Button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:fontFamily="sans-serif"
			android:text="@string/create_new_account"
			android:textAllCaps="false"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />

	</android.support.constraint.ConstraintLayout>




</LinearLayout>
