<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="giphouse.nl.proprapp.ui.groups.GroupAddActivity"
	tools:showIn="@layout/activity_group_add">

	<TextView
		android:id="@+id/textView3"
		android:layout_width="270dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		android:text="@string/group_add_description"
		android:textAlignment="center"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<android.support.design.widget.TextInputLayout
		android:id="@+id/textInputLayout"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView3">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/editGroupname"
			style="@android:style/Widget.Material.EditText"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="0dp"
			android:ems="10"
			android:hint="@string/hint_group_name"
			android:inputType="text"
			android:selectAllOnFocus="true"
			android:singleLine="true"
			android:textAlignment="center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView3" />
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/textInputLayout2"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/editGroupcode"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="0dp"
			android:layout_marginBottom="0dp"
			android:layout_marginEnd="0dp"
			android:layout_marginLeft="0dp"
			android:layout_marginRight="0dp"
			android:layout_marginStart="0dp"
			android:layout_marginTop="0dp"
			android:ems="10"
			android:hint="@string/hint_group_password"
			android:inputType="textCapCharacters"
			android:textAlignment="center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/editGroupname" />
	</android.support.design.widget.TextInputLayout>

	<ImageButton
		android:id="@+id/groupImageButton"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="24dp"
		android:contentDescription="@string/group_image"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
		app:srcCompat="@drawable/placeholder" />


</android.support.constraint.ConstraintLayout>
