<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="giphouse.nl.proprapp.ui.task.RateTaskFragment">

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/title_rate_task"
		android:textAppearance="@style/TextAppearance.AppCompat.Title"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent" />

	<RatingBar
		android:id="@+id/ratingBar"
		style="@style/Widget.AppCompat.RatingBar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:isIndicator="false"
		android:numStars="5"
		android:rating="0.0"
		android:stepSize="1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView2" />

	<android.support.design.widget.TextInputLayout
		android:id="@+id/rating_comments_layout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		app:layout_constraintBottom_toTopOf="@+id/rating_button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/ratingBar">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/rating_comments"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_rating_comments"
			android:inputType="text|textMultiLine" />

	</android.support.design.widget.TextInputLayout>

	<LinearLayout
		android:id="@+id/buttonContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:gravity="start|end"
		android:orientation="horizontal"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/rating_comments_layout">

		<Button
			android:id="@+id/rating_button"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button_submit_rating" />
	</LinearLayout>


</android.support.constraint.ConstraintLayout>