<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="giphouse.nl.proprapp.ui.group.GroupJoinActivity">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/ProprTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:popupTheme="@style/ProprTheme.PopupOverlay" />

	</android.support.design.widget.AppBarLayout>

	<TextView
		android:id="@+id/textView"
		android:layout_width="270dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="76dp"
		android:text="@string/join_group"
		android:textAlignment="center"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<android.support.design.widget.TextInputLayout
		android:id="@+id/textInputLayout"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/enterGroupcode"
			style="@android:style/Widget.Material.EditText"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="0dp"
			android:ems="10"
			android:hint="@string/hint_group_code"
			android:inputType="text"
			android:selectAllOnFocus="true"
			android:singleLine="true"
			android:textAlignment="center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView" />
	</android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginLeft="56dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/join"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.121"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
		app:layout_constraintVertical_bias="0.039" />

</android.support.constraint.ConstraintLayout>
